[gd_scene load_steps=8 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/Exo2-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/vfx/spotlight_4.png" type="Texture" id=3]
[ext_resource path="res://ui/VictoryScreen.gd" type="Script" id=4]

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.985227 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.22727, 0.0, 0, 0 ]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="VictoryScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0470588, 0.0313726, 0.164706, 0.752941 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource( 2 )
position = Vector2( 352, 240 )
scale = Vector2( 0.5, 0.5 )
amount = 16
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 320, 16 )
spread = 180.0
gravity = Vector2( 0, -30 )
initial_velocity = 120.0
scale_amount_curve = SubResource( 3 )
color = Color( 1, 0.498039, 0.309804, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 670.0
margin_bottom = 910.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 620.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 400 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "VICTORY"
align = 1
valign = 1

[node name="DragTimeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 404.0
margin_right = 620.0
margin_bottom = 433.0
size_flags_vertical = 5
text = "Total drag time: 32.4 s"
align = 1

[node name="TurnCountLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 437.0
margin_right = 620.0
margin_bottom = 779.0
size_flags_vertical = 3
text = "Turns: 4"
align = 1

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 190.0
margin_top = 783.0
margin_right = 430.0
margin_bottom = 860.0
rect_min_size = Vector2( 240, 0 )
size_flags_horizontal = 4
text = "CONTINUE"

[connection signal="visibility_changed" from="." to="." method="_on_VictoryScreen_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
